	require(), regardless of whether the underlying file system is
	case-sensitive or not.	So 'library(mass)' will not work, even
	on Windows.

    o	R no longer accepts associative use of relational operators.
	That is, 3 < 2 < 1 (which used to evalute as TRUE!) now causes
	a syntax error.	 If this breaks existing code, just add
	parentheses -- or braces in the case of plotmath.


NEW FEATURES

    o	There is a new atomic vector type, class "raw".	 See ?raw for
	full details including the operators and utility functions provided.

    o	The default barplot() method by default uses a
	gamma-corrected grey palette (rather than the heat color
	palette) for coloring its output when given a matrix.

    o	The 'formula' method for boxplot() has a 'na.action' argument,
	defaulting to NULL.  This is mainly useful if the response
	is a matrix when the previous default of 'na.omit' would omit
	entire rows.  (Related to PR#6846.)

	boxplot() and bxp() now obey global 'par' settings and also
	allow the specification of graphical options in more detail,
	compatibly with S-PLUS (fulfilling wishlist entry PR#6832)
	thanks to contributions from Arni Magnusson.  For consistency,
	'boxwex' is not an explicit argument anymore.

    o	chull() has been moved to package graphics (as it uses xy.coords).

    o	There is now a coef() method for summaries of "nls" objects.

    o	compareVersion(), packageDescription() and read.00Index()
	have been moved to package 'utils'.

    o	convolve(), fft(), mvfft() and nextn() have been moved to
	package stats.

    o	coplot() now makes use of cex.lab and font.lab par() settings.

    o	cumsum/prod/max/min() now preserve names.

    o	data(), .path.packages() and .find.packages() now interpret
	package = NULL to mean all loaded packages.

    o	data.frame() and its replacement methods remove the names from
	vector columns.	 Using I() will ensure that names are
	preserved.

    o	data.frame(check.names = TRUE) (the default) enforces unique